@@ -1,14 +1,8 @@
 import java.io.File.pathSeparator
+import scala.collection.mutable
 import scala.util.Try
-import scalanative.sbtplugin.ScalaNativePluginInternal._
-import scalanative.io.packageNameFromPath
 
-val sbt13Version          = "0.13.16"
-val sbt13ScalaVersion     = "2.10.7"
-val sbt10Version          = "1.0.4"
-val sbt10ScalaVersion     = "2.12.4"
-val libScalaVersion       = "2.11.12"
-val libCrossScalaVersions = Seq("2.11.8", "2.11.11", libScalaVersion)
+import build.ScalaVersions._
 
 // Convert "SomeName" to "some-name".
 def convertCamelKebab(name: String): String = {
@@ -21,10 +15,60 @@ def projectName(project: sbt.ResolvedProject): String = {
 }
 
 // Provide consistent project name pattern.
-lazy val nameSettings = Seq(
-  normalizedName := projectName(thisProject.value), // Maven <artifactId>
-  name := s"Scala Native ${projectName(thisProject.value)}" // Maven <name>
+lazy val nameSettings: Seq[Setting[_]] = Seq(
+  name := projectName(thisProject.value) // Maven <name>
 )
+
+lazy val disabledDocsSettings: Seq[Setting[_]] = Def.settings(
+  Compile / doc / sources := Nil
+)
+
+lazy val docsSettings: Seq[Setting[_]] = {
+  val javaDocBaseURL: String = "https://docs.oracle.com/javase/8/docs/api/"
+  // partially ported from Scala.js
+  Def.settings(
+    autoAPIMappings := true,
+    exportJars := true, // required so ScalaDoc linking works
+    Compile / doc / scalacOptions := {
+      val prev = (Compile / doc / scalacOptions).value
+      if (scalaVersion.value.startsWith("2.11."))
+        prev.filter(_ != "-Xfatal-warnings")
+      else prev
+    },
+    // Add Java Scaladoc mapping
+    apiMappings ++= {
+      val optRTJar = {
+        val bootClasspath = System.getProperty("sun.boot.class.path")
+        if (bootClasspath != null) {
+          // JDK <= 8, there is an rt.jar (or classes.jar) on the boot classpath
+          val jars = bootClasspath.split(java.io.File.pathSeparator)
+
+          def matches(path: String, name: String): Boolean =
+            path.endsWith(s"${java.io.File.separator}$name.jar")
+
+          jars
+            .find(matches(_, "rt")) // most JREs
+            .map(file)
+        } else {
+          // JDK >= 9, maybe sbt gives us a fake rt.jar in `scala.ext.dirs`
+          val scalaExtDirs = Option(System.getProperty("scala.ext.dirs"))
+          scalaExtDirs.map(extDirs => file(extDirs) / "rt.jar")
+        }
+      }
+
+      optRTJar.fold[Map[File, URL]] {
+        Map.empty
+      } { rtJar =>
+        assert(rtJar.exists, s"$rtJar does not exist")
+        Map(rtJar -> url(javaDocBaseURL))
+      }
+    },
+    /* Add a second Java Scaladoc mapping for cases where Scala actually
+     * understands the jrt:/ filesystem of Java 9.
+     */
+    apiMappings += file("/modules/java.base") -> url(javaDocBaseURL)
+  )
+}
 
 // The previous releases of Scala Native with which this version is binary compatible.
 val binCompatVersions = Set()
@@ -35,81 +79,80 @@ lazy val mimaSettings: Seq[Setting[_]] = Seq(
   }
 )
 
-lazy val baseSettings = Seq(
-  organization := "org.scala-native", // Maven <groupId>
-  version := nativeVersion // Maven <version>
-)
-
-addCommandAlias(
-  "rebuild",
-  Seq(
-    "clean",
-    "cleanCache",
-    "cleanLocal",
-    "dirty-rebuild"
-  ).mkString(";", ";", "")
-)
-
-addCommandAlias(
-  "dirty-rebuild",
-  Seq(
-    "scalalib/publishLocal",
-    "sbtScalaNative/publishLocal",
-    "testInterface/publishLocal"
-  ).mkString(";", ";", "")
+// Common start but individual sub-projects may add or remove scalacOptions.
+// project/build.sbt uses a less stringent set to bootstrap.
+inThisBuild(
+  Def.settings(
+    organization := "org.scala-native", // Maven <groupId>
+    version := nativeVersion,           // Maven <version>
+    scalaVersion := scala212,
+    crossScalaVersions := libCrossScalaVersions,
+    scalacOptions ++= Seq(
+      "-deprecation",
+      "-encoding",
+      "utf8",
+      "-feature",
+      "-target:jvm-1.8",
+      "-unchecked",
+      "-Xfatal-warnings"
+    )
+  )
 )
 
 addCommandAlias(
   "test-all",
   Seq(
+    "test-tools",
+    "test-runtime",
+    "test-scripted"
+  ).mkString(";")
+)
+
+addCommandAlias(
+  "test-tools",
+  Seq(
+    "testRunner/test",
+    "testInterface/test",
+    "tools/test",
+    "tools/mimaReportBinaryIssues"
+  ).mkString(";")
+)
+
+addCommandAlias(
+  "test-runtime",
+  Seq(
     "sandbox/run",
     "tests/test",
-    "tools/test",
-    "nirparser/test",
-    "benchmarks/run --test",
-    "sbtScalaNative/scripted",
-    "tools/mimaReportBinaryIssues"
-  ).mkString(";", ";", "")
+    "testsExt/test",
+    "junitTestOutputsJVM/test",
+    "junitTestOutputsNative/test"
+  ).mkString(";")
+)
+
+addCommandAlias(
+  "test-scripted",
+  Seq(
+    "sbtScalaNative/scripted"
+  ).mkString(";")
 )
 
 lazy val publishSnapshot =
   taskKey[Unit]("Publish snapshot to sonatype on every commit to master.")
 
-lazy val setUpTestingCompiler = Def.task {
-  val nscpluginjar = (Keys.`package` in nscplugin in Compile).value
-  val nativelibjar = (Keys.`package` in nativelib in Compile).value
-  val auxlibjar    = (Keys.`package` in auxlib in Compile).value
-  val scalalibjar  = (Keys.`package` in scalalib in Compile).value
-  val javalibjar   = (Keys.`package` in javalib in Compile).value
-  val testingcompilercp =
-    (fullClasspath in testingCompiler in Compile).value.files
-  val testingcompilerjar = (Keys.`package` in testingCompiler in Compile).value
-
-  sys.props("scalanative.nscplugin.jar") = nscpluginjar.getAbsolutePath
-  sys.props("scalanative.testingcompiler.cp") =
-    (testingcompilercp :+ testingcompilerjar) map (_.getAbsolutePath) mkString pathSeparator
-  sys.props("scalanative.nativeruntime.cp") =
-    Seq(nativelibjar, auxlibjar, scalalibjar, javalibjar) mkString pathSeparator
-  sys.props("scalanative.nativelib.dir") =
-    ((crossTarget in Compile).value / "nativelib").getAbsolutePath
-}
-
 // to publish plugin (we only need to do this once, it's already done!)
-// follow: http://www.scala-sbt.org/0.13/docs/Bintray-For-Plugins.html
+// follow: https://www.scala-sbt.org/1.x/docs/Bintray-For-Plugins.html
 // then add a new package
 // name: sbt-scala-native, license: BSD-like, version control: git@github.com:scala-native/scala-native.git
 // to be available without a resolver
-// follow: http://www.scala-sbt.org/0.13/docs/Bintray-For-Plugins.html#Linking+your+package+to+the+sbt+organization
-lazy val bintrayPublishSettings = Seq(
+// follow: https://www.scala-sbt.org/1.x/docs/Bintray-For-Plugins.html#Linking+your+package+to+the+sbt+organization
+lazy val bintrayPublishSettings: Seq[Setting[_]] = Seq(
   bintrayRepository := "sbt-plugins",
   bintrayOrganization := Some("scala-native")
 ) ++ publishSettings
 
-lazy val mavenPublishSettings = Seq(
+lazy val mavenPublishSettings: Seq[Setting[_]] = Seq(
   publishMavenStyle := true,
-  pomIncludeRepository := { x =>
-    false
-  },
+  pomIncludeRepository := { x => false },
   publishTo := {
     val nexus = "https://oss.sonatype.org/"
     if (version.value.trim.endsWith("SNAPSHOT"))
@@ -134,7 +177,7 @@ lazy val mavenPublishSettings = Seq(
           "not going to publish a snapshot due to: " +
             s"travis = $travis, pr = $pr, " +
             s"branch = $branch, snapshot = $snapshot")
-        Def.task()
+        Def.task((): Unit)
     }
   }.value,
   credentials ++= {
@@ -149,9 +192,13 @@ lazy val mavenPublishSettings = Seq(
   }.toSeq
 ) ++ publishSettings
 
-lazy val publishSettings = Seq(
-  publishArtifact in Compile := true,
-  publishArtifact in Test := false,
+lazy val publishSettings: Seq[Setting[_]] = Seq(
+  Compile / publishArtifact := true,
+  Test / publishArtifact := false,
+  Compile / packageDoc / publishArtifact :=
+    !version.value.contains("SNAPSHOT"),
+  Compile / packageSrc / publishArtifact :=
+    !version.value.contains("SNAPSHOT"),
   homepage := Some(url("http://www.scala-native.org")),
   startYear := Some(2015),
   licenses := Seq(
@@ -175,49 +222,60 @@ lazy val publishSettings = Seq(
   )
 ) ++ nameSettings
 
-lazy val noPublishSettings = Seq(
+lazy val noPublishSettings: Seq[Setting[_]] = Seq(
   publishArtifact := false,
   packagedArtifacts := Map.empty,
   publish := {},
   publishLocal := {},
-  publishSnapshot := {
-    println("no publish")
-  }
-) ++ nameSettings
+  publishSnapshot := { println("no publish") },
+  publish / skip := true
+) ++ nameSettings ++ disabledDocsSettings
 
-lazy val toolSettings =
-  baseSettings ++
-    Seq(
-      crossSbtVersions := List(sbt13Version, sbt10Version),
-      scalaVersion := {
-        (sbtBinaryVersion in pluginCrossBuild).value match {
-          case "0.13" => sbt13ScalaVersion
-          case _      => sbt10ScalaVersion
-        }
-      },
-      scalacOptions ++= Seq(
-        "-deprecation",
-        "-unchecked",
-        "-feature",
-        "-encoding",
-        "utf8"
-      ),
-      javacOptions ++= Seq("-encoding", "utf8")
+lazy val toolSettings: Seq[Setting[_]] =
+  Def.settings(
+    javacOptions ++= Seq("-encoding", "utf8")
+  )
+
+lazy val buildInfoSettings: Seq[Setting[_]] =
+  Def.settings(
+    buildInfoPackage := "scala.scalanative.buildinfo",
+    buildInfoObject := "ScalaNativeBuildInfo",
+    buildInfoKeys := Seq[BuildInfoKey](
+      version,
+      sbtVersion,
+      scalaVersion,
+      "nativeScalaVersion" -> (nativelib / scalaVersion).value
     )
-
-lazy val libSettings =
-  (baseSettings ++ ScalaNativePlugin.projectSettings.tail) ++ Seq(
-    scalaVersion := libScalaVersion,
-    resolvers := Nil,
-    scalacOptions ++= Seq("-encoding", "utf8")
   )
 
-lazy val projectSettings =
-  ScalaNativePlugin.projectSettings ++ Seq(
-    scalaVersion := libScalaVersion,
-    resolvers := Nil,
-    scalacOptions ++= Seq("-target:jvm-1.8")
+lazy val disabledTestsSettings: Seq[Setting[_]] = {
+  def testsTaskUnsupported[T] = Def.task[T] {
+    throw new MessageOnlyException(
+      s"""Usage of this task in ${projectName(thisProject.value)} project is not supported in this build.
+         |To run tests use explicit syntax containing name of project: <project_name>/<task>.
+         |You can also use one of predefined aliases: test-all, test-tools, test-runtime, test-scripted.
+         |""".stripMargin
+    )
+  }
+
+  Def.settings(
+    inConfig(Test) {
+      Seq(
+        test / aggregate := false,
+        test := testsTaskUnsupported.value,
+        testOnly / aggregate := false,
+        testOnly := testsTaskUnsupported.value,
+        testQuick / aggregate := false,
+        testQuick := testsTaskUnsupported.value,
+        executeTests / aggregate := false,
+        executeTests := testsTaskUnsupported[Tests.Output].value
+      )
+    }
   )
+}
+
+noPublishSettings
+disabledTestsSettings
 
 lazy val util =
   project
@@ -232,40 +290,59 @@ lazy val nir =
     .settings(mavenPublishSettings)
     .dependsOn(util)
 
-lazy val nirparser =
-  project
-    .in(file("nirparser"))
-    .settings(toolSettings)
-    .settings(noPublishSettings)
-    .settings(
-      libraryDependencies ++= Seq(
-        "com.lihaoyi" %% "fastparse"  % "1.0.0",
-        "com.lihaoyi" %% "scalaparse" % "1.0.0",
-        compilerPlugin(
-          "org.scalamacros" % "paradise" % "2.1.0" cross CrossVersion.full),
-        "org.scalacheck" %% "scalacheck" % "1.13.4" % "test",
-        "org.scalatest"  %% "scalatest"  % "3.0.0"  % "test"
-      )
-    )
-    .dependsOn(nir)
-
 lazy val tools =
   project
     .in(file("tools"))
     .settings(toolSettings)
     .settings(mavenPublishSettings)
+    .enablePlugins(BuildInfoPlugin)
+    .settings(buildInfoSettings)
     .settings(
       libraryDependencies ++= Seq(
-        "org.scalacheck" %% "scalacheck" % "1.13.4" % "test",
-        "org.scalatest"  %% "scalatest"  % "3.0.0"  % "test"
+        "org.scalacheck" %% "scalacheck" % "1.14.3" % "test",
+        "org.scalatest"  %% "scalatest"  % "3.1.1"  % "test"
       ),
-      fullClasspath in Test := ((fullClasspath in Test) dependsOn setUpTestingCompiler).value,
-      publishLocal := publishLocal
-        .dependsOn(publishLocal in nir)
-        .dependsOn(publishLocal in util)
-        .value,
+      Test / fork := true,
+      Test / javaOptions ++= {
+        val nscpluginjar = (nscplugin / Compile / Keys.`package`).value
+        val testingcompilercp =
+          (testingCompiler / Compile / fullClasspath).value.files
+        val allCoreLibsCp =
+          (allCoreLibs / Compile / fullClasspath).value.files
+        Seq(
+          "-Dscalanative.nscplugin.jar=" + nscpluginjar.getAbsolutePath,
+          "-Dscalanative.testingcompiler.cp=" +
+            testingcompilercp.map(_.getAbsolutePath).mkString(pathSeparator),
+          "-Dscalanative.nativeruntime.cp=" +
+            allCoreLibsCp.map(_.getAbsolutePath).mkString(pathSeparator)
+        )
+      },
+      scalacOptions ++= {
+        CrossVersion.partialVersion(scalaVersion.value) match {
+          case Some((2, 11 | 12)) => Nil
+          case _                  =>
+            // 2.13 and 2.11 tools are only used in partest.
+            // It looks like it's impossible to provide alternative sources - it fails to compile plugin sources,
+            // before attaching them to other build projects. We disable unsolvable fatal-warnings with filters below
+            Seq(
+              // In 2.13 lineStream_! was replaced with lazyList_!.
+              "-Wconf:cat=deprecation&msg=lineStream_!:s",
+              // OpenHashMap is used with value class parameter type, we cannot replace it with AnyRefMap or LongMap
+              // Should not be replaced with HashMap due to performance reasons.
+              "-Wconf:cat=deprecation&msg=OpenHashMap:s"
+            )
+        }
+      },
+      libraryDependencies ++= {
+        CrossVersion.partialVersion(scalaVersion.value) match {
+          case Some((2, 11 | 12)) => Nil
+          case _ =>
+            List(
+              "org.scala-lang.modules" %% "scala-parallel-collections" % "1.0.0")
+        }
+      },
       // Running tests in parallel results in `FileSystemAlreadyExistsException`
-      parallelExecution in Test := false,
+      Test / parallelExecution := false,
       mimaSettings
     )
     .dependsOn(nir, util, testingCompilerInterface % Test)
@@ -273,309 +350,535 @@ lazy val tools =
 lazy val nscplugin =
   project
     .in(file("nscplugin"))
-    .settings(baseSettings)
     .settings(mavenPublishSettings)
     .settings(
-      scalaVersion := libScalaVersion,
-      crossScalaVersions := libCrossScalaVersions,
       crossVersion := CrossVersion.full,
-      unmanagedSourceDirectories in Compile ++= Seq(
-        (scalaSource in (nir, Compile)).value,
-        (scalaSource in (util, Compile)).value
+      Compile / unmanagedSourceDirectories ++= Seq(
+        (nir / Compile / scalaSource).value,
+        (util / Compile / scalaSource).value
       ),
       libraryDependencies ++= Seq(
         "org.scala-lang" % "scala-compiler" % scalaVersion.value,
         "org.scala-lang" % "scala-reflect"  % scalaVersion.value
-      )
+      ),
+      exportJars := true
     )
+    .settings(scalacOptions += "-Xno-patmat-analysis")
 
-lazy val sbtPluginSettings =
+lazy val sbtPluginSettings: Seq[Setting[_]] =
   toolSettings ++
     bintrayPublishSettings ++
-    ScriptedPlugin.scriptedSettings ++
     Seq(
-      sbtPlugin := true,
-      scriptedLaunchOpts ++=
-        Seq("-Xmx1024M",
-            "-XX:MaxPermSize=256M",
-            "-Dplugin.version=" + version.value) ++
-          ivyPaths.value.ivyHome.map(home => s"-Dsbt.ivy.home=${home}").toSeq
+      sbtVersion := sbt10Version,
+      scriptedLaunchOpts := {
+        scriptedLaunchOpts.value ++
+          Seq("-Xmx1024M",
+              "-XX:MaxMetaspaceSize=256M",
+              "-Dplugin.version=" + version.value,
+              "-Dscala.version=" + (nativelib / scalaVersion).value) ++
+          ivyPaths.value.ivyHome.map(home => s"-Dsbt.ivy.home=$home").toSeq
+      }
     )
 
 lazy val sbtScalaNative =
   project
     .in(file("sbt-scala-native"))
+    .enablePlugins(SbtPlugin)
     .settings(sbtPluginSettings)
     .settings(
-      crossScalaVersions := libCrossScalaVersions,
-      // fixed in https://github.com/sbt/sbt/pull/3397 (for sbt 0.13.17)
-      sbtBinaryVersion in update := (sbtBinaryVersion in pluginCrossBuild).value,
-      addSbtPlugin("org.portable-scala" % "sbt-platform-deps" % "1.0.0-M2"),
-      sbtTestDirectory := (baseDirectory in ThisBuild).value / "scripted-tests",
-      // `testInterfaceSerialization` needs to be available from the sbt plugin,
-      // but it's a Scala Native project (and thus 2.11), and the plugin is 2.10 or 2.12.
-      // We simply add the sources to mimic cross-compilation.
-      sources in Compile ++= (sources in Compile in testInterfaceSerialization).value,
+      crossScalaVersions := Seq(sbt10ScalaVersion),
+      addSbtPlugin("org.portable-scala" % "sbt-platform-deps" % "1.0.0"),
+      sbtTestDirectory := (ThisBuild / baseDirectory).value / "scripted-tests",
       // publish the other projects before running scripted tests.
-      scripted := scripted
-        .dependsOn(publishLocal in testInterface)
-        .dependsOn(publishLocal in ThisProject)
-        .dependsOn(publishLocal in scalalib)
-        .evaluated,
-      publishLocal := publishLocal.dependsOn(publishLocal in tools).value
+      scriptedDependencies := {
+        scriptedDependencies
+          .dependsOn(
+            // Compiler plugins
+            nscplugin / publishLocal,
+            junitPlugin / publishLocal,
+            // Scala Native libraries
+            nativelib / publishLocal,
+            clib / publishLocal,
+            posixlib / publishLocal,
+            javalib / publishLocal,
+            auxlib / publishLocal,
+            scalalib / publishLocal,
+            testInterfaceSbtDefs / publishLocal,
+            testInterface / publishLocal,
+            junitRuntime / publishLocal,
+            // JVM libraries
+            util / publishLocal,
+            nir / publishLocal,
+            tools / publishLocal,
+            testRunner / publishLocal
+          )
+          .value
+      }
     )
-    .dependsOn(tools)
+    .dependsOn(tools, testRunner)
 
 lazy val nativelib =
   project
     .in(file("nativelib"))
-    .settings(libSettings)
+    .enablePlugins(MyScalaNativePlugin)
     .settings(mavenPublishSettings)
+    .settings(docsSettings)
     .settings(
       libraryDependencies += "org.scala-lang" % "scala-reflect" % scalaVersion.value,
-      publishLocal := publishLocal
-        .dependsOn(publishLocal in nscplugin)
-        .value
+      exportJars := true
     )
+    .dependsOn(nscplugin % "plugin")
+
+lazy val clib =
+  project
+    .in(file("clib"))
+    .enablePlugins(MyScalaNativePlugin)
+    .settings(mavenPublishSettings)
+    .dependsOn(nscplugin % "plugin", nativelib)
+
+lazy val posixlib =
+  project
+    .in(file("posixlib"))
+    .enablePlugins(MyScalaNativePlugin)
+    .settings(mavenPublishSettings)
+    .dependsOn(nscplugin % "plugin", nativelib)
+
+lazy val javalibCommonSettings = Def.settings(
+  disabledDocsSettings,
+  // This is required to have incremental compilation to work in javalib.
+  // We put our classes on scalac's `javabootclasspath` so that it uses them
+  // when compiling rather than the definitions from the JDK.
+  Compile / scalacOptions := {
+    val previous = (Compile / scalacOptions).value
+    val javaBootClasspath =
+      scala.tools.util.PathResolver.Environment.javaBootClassPath
+    val classDir  = (Compile / classDirectory).value.getAbsolutePath
+    val separator = sys.props("path.separator")
+    "-javabootclasspath" +: s"$classDir$separator$javaBootClasspath" +: previous
+  },
+  // Don't include classfiles for javalib in the packaged jar.
+  Compile / packageBin / mappings := {
+    val previous = (Compile / packageBin / mappings).value
+    previous.filter {
+      case (_, path) =>
+        !path.endsWith(".class")
+    }
+  },
+  exportJars := true
+)
 
 lazy val javalib =
   project
     .in(file("javalib"))
-    .settings(libSettings)
+    .enablePlugins(MyScalaNativePlugin)
     .settings(mavenPublishSettings)
-    .settings(
-      sources in doc in Compile := Nil, // doc generation currently broken
-      // This is required to have incremental compilation to work in javalib.
-      // We put our classes on scalac's `javabootclasspath` so that it uses them
-      // when compiling rather than the definitions from the JDK.
-      scalacOptions in Compile := {
-        val previous = (scalacOptions in Compile).value
-        val javaBootClasspath =
-          scala.tools.util.PathResolver.Environment.javaBootClassPath
-        val classDir  = (classDirectory in Compile).value.getAbsolutePath()
-        val separator = sys.props("path.separator")
-        "-javabootclasspath" +: s"$classDir$separator$javaBootClasspath" +: previous
-      },
-      // Don't include classfiles for javalib in the packaged jar.
-      mappings in packageBin in Compile := {
-        val previous = (mappings in packageBin in Compile).value
-        previous.filter {
-          case (file, path) =>
-            !path.endsWith(".class")
-        }
-      },
-      publishLocal := publishLocal
-        .dependsOn(publishLocal in nativelib)
-        .value
-    )
-    .dependsOn(nativelib)
+    .settings(javalibCommonSettings)
+    .dependsOn(nscplugin % "plugin", posixlib, clib)
 
-lazy val assembleScalaLibrary = taskKey[Unit](
-  "Checks out scala standard library from submodules/scala and then applies overrides.")
+lazy val javalibExtDummies = project
+  .in(file("javalib-ext-dummies"))
+  .enablePlugins(MyScalaNativePlugin)
+  .settings(noPublishSettings)
+  .settings(javalibCommonSettings)
+  .dependsOn(nscplugin % "plugin", nativelib)
+
+val fetchScalaSource =
+  taskKey[File]("Fetches the scala source for the current scala version")
 
 lazy val auxlib =
   project
     .in(file("auxlib"))
-    .settings(libSettings)
+    .enablePlugins(MyScalaNativePlugin)
     .settings(mavenPublishSettings)
     .settings(
-      publishLocal := publishLocal
-        .dependsOn(publishLocal in javalib)
-        .value
+      exportJars := true
     )
-    .dependsOn(nativelib)
+    .dependsOn(nscplugin % "plugin", nativelib)
 
 lazy val scalalib =
   project
     .in(file("scalalib"))
-    .settings(libSettings)
-    .settings(mavenPublishSettings)
+    .enablePlugins(MyScalaNativePlugin)
     .settings(
-      assembleScalaLibrary := {
-        import org.eclipse.jgit.api._
+      scalacOptions -= "-deprecation",
+      scalacOptions += "-deprecation:false",
+      // The option below is needed since Scala 2.12.12.
+      scalacOptions += "-language:postfixOps",
+      // The option below is needed since Scala 2.13.0.
+      scalacOptions += "-language:implicitConversions",
+      scalacOptions += "-language:higherKinds",
+      /* Used to disable fatal warnings due to problems with compilation of `@nowarn` annotation */
+      scalacOptions --= {
+        CrossVersion.partialVersion(scalaVersion.value) match {
+          case Some((2, 12))
+              if scalaVersion.value
+                .stripPrefix("2.12.")
+                .takeWhile(_.isDigit)
+                .toInt >= 13 =>
+            Seq("-Xfatal-warnings")
+          case _ => Nil
+        }
+      }
+    )
+    .settings(mavenPublishSettings)
+    .settings(disabledDocsSettings)
+    .settings(
+      // Code to fetch scala sources adapted, with gratitude, from
+      // Scala.js Build.scala at the suggestion of @sjrd.
+      // https://github.com/scala-js/scala-js/blob/\
+      //    1761f94ee31902b61c579d5cb121117c9dc08295/\
+      //    project/Build.scala#L1125-L1233
+      //
+      // By intent, the Scala Native code below is as identical as feasible.
+      // Scala Native build.sbt uses a slightly different baseDirectory
+      // than Scala.js. See commented starting with "SN Port:" below.
+      libraryDependencies +=
+        "org.scala-lang" % "scala-library" % scalaVersion.value classifier "sources",
+      fetchScalaSource / artifactPath :=
+        target.value / "scalaSources" / scalaVersion.value,
+      // Scala.js original comment modified to clarify issue is Scala.js.
+      /* Work around for https://github.com/scala-js/scala-js/issues/2649
+       * We would like to always use `update`, but
+       * that fails if the scalaVersion we're looking for happens to be the
+       * version of Scala used by sbt itself. This is clearly a bug in sbt,
+       * which we work around here by using `updateClassifiers` instead in
+       * that case.
+       */
+      fetchScalaSource / update := Def.taskDyn {
+        if (scalaVersion.value == scala.util.Properties.versionNumberString)
+          updateClassifiers
+        else
+          update
+      }.value,
+      fetchScalaSource := {
+        val s        = streams.value
+        val cacheDir = s.cacheDirectory
+        val ver      = scalaVersion.value
+        val trgDir   = (fetchScalaSource / artifactPath).value
 
-        val s      = streams.value
-        val trgDir = target.value / "scalaSources" / scalaVersion.value
-        val scalaRepo = sys.env
-          .get("SCALANATIVE_SCALAREPO")
-          .getOrElse("https://github.com/scala/scala.git")
+        val report = (fetchScalaSource / update).value
+        val scalaLibSourcesJar = report
+          .select(configuration = configurationFilter("compile"),
+                  module = moduleFilter(name = "scala-library"),
+                  artifact = artifactFilter(classifier = "sources"))
+          .headOption
+          .getOrElse {
+            throw new Exception(
+              s"Could not fetch scala-library sources for version $ver")
+          }
 
-        if (!trgDir.exists) {
-          s.log.info(
-            s"Fetching Scala source version ${scalaVersion.value} from $scalaRepo")
+        FileFunction.cached(cacheDir / s"fetchScalaSource-$ver",
+                            FilesInfo.lastModified,
+                            FilesInfo.exists) { dependencies =>
+          s.log.info(s"Unpacking Scala library sources to $trgDir...")
 
-          // Make parent dirs and stuff
+          if (trgDir.exists)
+            IO.delete(trgDir)
           IO.createDirectory(trgDir)
+          IO.unzip(scalaLibSourcesJar, trgDir)
+        }(Set(scalaLibSourcesJar))
 
-          // Clone scala source code
-          new CloneCommand()
-            .setDirectory(trgDir)
-            .setURI(scalaRepo)
-            .call()
+        trgDir
+      },
+      Compile / unmanagedSourceDirectories := {
+        // Calculates all prefixes of the current Scala version
+        // (including the empty prefix) to construct override
+        // directories like the following:
+        // - override-2.13.0-RC1
+        // - override-2.13.0
+        // - override-2.13
+        // - override-2
+        // - override
+
+        val ver = scalaVersion.value
+
+        // SN Port: sjs uses baseDirectory.value.getParentFile here.
+        val base  = baseDirectory.value
+        val parts = ver.split(Array('.', '-'))
+        val verList = parts.inits.map { ps =>
+          val len = ps.mkString(".").length
+          // re-read version, since we lost '.' and '-'
+          ver.substring(0, len)
+        }
+        def dirStr(v: String) =
+          if (v.isEmpty) "overrides" else s"overrides-$v"
+        val dirs = verList.map(base / dirStr(_)).filter(_.exists)
+        dirs.toSeq // most specific shadow less specific
+      },
+      // Compute sources
+      // Files in earlier src dirs shadow files in later dirs
+      Compile / sources := {
+        // Sources coming from the sources of Scala
+        val scalaSrcDir = fetchScalaSource.value
+
+        // All source directories (overrides shadow scalaSrcDir)
+        val sourceDirectories =
+          (Compile / unmanagedSourceDirectories).value :+ scalaSrcDir
+
+        // Filter sources with overrides
+        def normPath(f: File): String =
+          f.getPath.replace(java.io.File.separator, "/")
+
+        val sources = mutable.ListBuffer.empty[File]
+        val paths   = mutable.Set.empty[String]
+
+        val s = streams.value
+
+        for {
+          srcDir <- sourceDirectories
+          normSrcDir = normPath(srcDir)
+          src <- (srcDir ** "*.scala").get
+        } {
+          val normSrc = normPath(src)
+          val path    = normSrc.substring(normSrcDir.length)
+          val useless =
+            path.contains("/scala/collection/parallel/") ||
+              path.contains("/scala/util/parsing/")
+          if (!useless) {
+            if (paths.add(path))
+              sources += src
+            else
+              s.log.debug(s"not including $src")
+          }
         }
 
-        // Checkout proper ref. We do this anyway so we fail if
-        // something is wrong
-        val git = Git.open(trgDir)
-        s.log.info(s"Checking out Scala source version ${scalaVersion.value}")
-        git.checkout().setName(s"v${scalaVersion.value}").call()
-
-        IO.delete(file("scalalib/src/main/scala"))
-        IO.copyDirectory(trgDir / "src" / "library" / "scala",
-                         file("scalalib/src/main/scala/scala"))
-
-        val epoch :: major :: _ = scalaVersion.value.split("\\.").toList
-        IO.copyDirectory(file(s"scalalib/overrides-$epoch.$major/scala"),
-                         file("scalalib/src/main/scala/scala"),
-                         overwrite = true)
-
-        // Remove all java code, as it's not going to be available
-        // in the NIR anyway. This also resolves issues wrt overrides
-        // of code that was previously in Java but is in Scala now.
-        (file("scalalib/src/main/scala") ** "*.java").get.foreach(IO.delete)
+        sources.result()
       },
-      compile in Compile := (compile in Compile)
-        .dependsOn(assembleScalaLibrary)
-        .value,
       // Don't include classfiles for scalalib in the packaged jar.
-      mappings in packageBin in Compile := {
-        val previous = (mappings in packageBin in Compile).value
+      Compile / packageBin / mappings := {
+        val previous = (Compile / packageBin / mappings).value
         previous.filter {
           case (file, path) =>
             !path.endsWith(".class")
         }
       },
-      publishLocal := publishLocal
-        .dependsOn(assembleScalaLibrary, publishLocal in auxlib)
-        .value
+      // Sources in scalalib are only internal overrides, we don't include them in the resulting sources jar
+      Compile / packageSrc / mappings := Seq.empty,
+      exportJars := true
     )
-    .dependsOn(auxlib, nativelib, javalib)
+    .dependsOn(nscplugin % "plugin", auxlib, nativelib, javalib)
+
+// Shortcut for further Native projects to depend on all core libraries
+lazy val allCoreLibs: Project =
+  scalalib // scalalib transitively depends on all the other core libraries
 
 lazy val tests =
   project
     .in(file("unit-tests"))
-    .settings(projectSettings)
+    .enablePlugins(MyScalaNativePlugin, BuildInfoPlugin)
+    .settings(buildInfoSettings)
+    .settings(
+      scalacOptions -= "-deprecation",
+      scalacOptions += "-deprecation:false"
+    )
     .settings(noPublishSettings)
     .settings(
-      // nativeOptimizerReporter := OptimizerReporter.toDirectory(
-      //   crossTarget.value),
-      // nativeLinkerReporter := LinkerReporter.toFile(
-      //   target.value / "out.dot"),
-      libraryDependencies += "org.scala-native" %%% "test-interface" % nativeVersion,
-      testFrameworks += new TestFramework("tests.NativeFramework"),
-      envVars in (Test, test) ++= Map(
+      Test / testOptions ++= Seq(
+        Tests.Argument(TestFrameworks.JUnit, "-a", "-s", "-v")
+      ),
+      Test / test / envVars ++= Map(
         "USER"                           -> "scala-native",
-        "HOME"                           -> baseDirectory.value.getAbsolutePath,
+        "HOME"                           -> System.getProperty("user.home"),
         "SCALA_NATIVE_ENV_WITH_EQUALS"   -> "1+1=2",
         "SCALA_NATIVE_ENV_WITHOUT_VALUE" -> "",
         "SCALA_NATIVE_ENV_WITH_UNICODE"  -> 0x2192.toChar.toString,
         "SCALA_NATIVE_USER_DIR"          -> System.getProperty("user.dir")
-      )
+      ),
+      nativeLinkStubs := true
     )
-    .enablePlugins(ScalaNativePlugin)
+    .dependsOn(nscplugin   % "plugin",
+               junitPlugin % "plugin",
+               allCoreLibs,
+               testInterface,
+               junitRuntime)
+
+lazy val testsExt = project
+  .in(file("unit-tests-ext"))
+  .enablePlugins(MyScalaNativePlugin)
+  .settings(noPublishSettings)
+  .settings(
+    Test / testOptions ++= Seq(
+      Tests.Argument(TestFrameworks.JUnit, "-a", "-s", "-v")
+    ),
+    nativeLinkStubs := true
+  )
+  .dependsOn(nscplugin     % "plugin",
+             junitPlugin   % "plugin",
+             testInterface % "test",
+             tests,
+             junitRuntime,
+             javalibExtDummies)
 
 lazy val sandbox =
   project
     .in(file("sandbox"))
+    .enablePlugins(MyScalaNativePlugin)
+    .settings(scalacOptions -= "-Xfatal-warnings")
     .settings(noPublishSettings)
-    .settings(
-      // nativeOptimizerReporter := OptimizerReporter.toDirectory(
-      //   crossTarget.value),
-      scalaVersion := libScalaVersion
-    )
-    .enablePlugins(ScalaNativePlugin)
-
-lazy val benchmarks =
-  project
-    .in(file("benchmarks"))
-    .settings(projectSettings)
-    .settings(noPublishSettings)
-    .settings(
-      nativeMode := "release",
-      sourceGenerators in Compile += Def.task {
-        val dir = (scalaSource in Compile).value
-        val benchmarks = (dir ** "*Benchmark.scala").get
-          .flatMap(IO.relativizeFile(dir, _))
-          .map(file => packageNameFromPath(file.toPath))
-          .filter(_ != "benchmarks.Benchmark")
-          .mkString("Seq(new ", ", new ", ")")
-        val file = (sourceManaged in Compile).value / "benchmarks" / "Discover.scala"
-        IO.write(
-          file,
-          s"""
-          package benchmarks
-          object Discover {
-            val discovered: Seq[benchmarks.Benchmark[_]] = $benchmarks
-          }
-        """
-        )
-        Seq(file)
-      }
-    )
-    .enablePlugins(ScalaNativePlugin)
+    .dependsOn(nscplugin % "plugin", allCoreLibs, testInterface % Test)
 
 lazy val testingCompilerInterface =
   project
     .in(file("testing-compiler-interface"))
-    .settings(libSettings)
     .settings(noPublishSettings)
     .settings(
       crossPaths := false,
-      crossVersion := CrossVersion.Disabled,
+      crossVersion := CrossVersion.disabled,
       autoScalaLibrary := false
     )
 
 lazy val testingCompiler =
   project
     .in(file("testing-compiler"))
-    .settings(libSettings)
     .settings(noPublishSettings)
     .settings(
       libraryDependencies ++= Seq(
         "org.scala-lang" % "scala-compiler" % scalaVersion.value,
         "org.scala-lang" % "scala-reflect"  % scalaVersion.value
-      )
+      ),
+      Compile / unmanagedSourceDirectories ++= {
+        val oldCompat: File = baseDirectory.value / "src/main/compat-old"
+        val newCompat: File = baseDirectory.value / "src/main/compat-new"
+        CrossVersion
+          .partialVersion(scalaVersion.value)
+          .collect {
+            case (2, 11) => oldCompat
+            case (2, 12) =>
+              val revision =
+                scalaVersion.value
+                  .stripPrefix("2.12.")
+                  .takeWhile(_.isDigit)
+                  .toInt
+              if (revision < 13) oldCompat
+              else newCompat
+            case (2, 13) => newCompat
+          }
+          .toSeq
+      },
+      exportJars := true
     )
-    .dependsOn(testingCompilerInterface, nativelib)
+    .dependsOn(testingCompilerInterface)
+
+lazy val testInterfaceCommonSourcesSettings: Seq[Setting[_]] = Seq(
+  Compile / unmanagedSourceDirectories += baseDirectory.value.getParentFile / "test-interface-common/src/main/scala",
+  Test / unmanagedSourceDirectories += baseDirectory.value.getParentFile / "test-interface-common/src/test/scala"
+)
 
 lazy val testInterface =
   project
-    .settings(toolSettings)
-    .settings(scalaVersion := libScalaVersion)
-    .settings(mavenPublishSettings)
     .in(file("test-interface"))
-    .settings(
-      libraryDependencies += "org.scala-sbt"    % "test-interface"   % "1.0",
-      libraryDependencies -= "org.scala-native" %%% "test-interface" % version.value % Test,
-      publishLocal := publishLocal
-        .dependsOn(publishLocal in testInterfaceSerialization)
-        .value
-    )
-    .enablePlugins(ScalaNativePlugin)
-    .dependsOn(testInterfaceSerialization)
-
-lazy val testInterfaceSerialization =
-  project
-    .settings(toolSettings)
-    .settings(scalaVersion := libScalaVersion)
+    .enablePlugins(MyScalaNativePlugin)
     .settings(mavenPublishSettings)
-    .in(file("test-interface-serialization"))
-    .settings(
-      libraryDependencies -= "org.scala-native" %%% "test-interface" % version.value % Test,
-      publishLocal := publishLocal
-        .dependsOn(publishLocal in testInterfaceSbtDefs)
-        .value
-    )
-    .dependsOn(testInterfaceSbtDefs)
-    .enablePlugins(ScalaNativePlugin)
+    .settings(testInterfaceCommonSourcesSettings)
+    .dependsOn(nscplugin   % "plugin",
+               junitPlugin % "plugin",
+               allCoreLibs,
+               testInterfaceSbtDefs,
+               junitRuntime,
+               junitAsyncNative % "test")
 
 lazy val testInterfaceSbtDefs =
   project
-    .settings(toolSettings)
-    .settings(scalaVersion := libScalaVersion)
-    .settings(mavenPublishSettings)
     .in(file("test-interface-sbt-defs"))
+    .enablePlugins(MyScalaNativePlugin)
+    .settings(mavenPublishSettings)
+    .settings(docsSettings)
+    .dependsOn(nscplugin % "plugin", allCoreLibs)
+
+lazy val testRunner =
+  project
+    .in(file("test-runner"))
+    .settings(mavenPublishSettings)
+    .settings(testInterfaceCommonSourcesSettings)
     .settings(
-      libraryDependencies -= "org.scala-native" %%% "test-interface" % version.value % Test
+      libraryDependencies ++= Seq(
+        "org.scala-sbt" % "test-interface"  % "1.0",
+        "com.novocode"  % "junit-interface" % "0.11" % "test"
+      )
     )
-    .enablePlugins(ScalaNativePlugin)
+    .dependsOn(tools, junitAsyncJVM % "test")
+
+// JUnit modules and settings ------------------------------------------------
+
+lazy val junitRuntime =
+  project
+    .in(file("junit-runtime"))
+    .enablePlugins(MyScalaNativePlugin)
+    .settings(mavenPublishSettings)
+    .settings(nameSettings)
+    .dependsOn(
+      nscplugin % "plugin",
+      testInterfaceSbtDefs
+    )
+
+lazy val junitPlugin =
+  project
+    .in(file("junit-plugin"))
+    .settings(mavenPublishSettings)
+    .settings(
+      crossVersion := CrossVersion.full,
+      libraryDependencies += "org.scala-lang" % "scala-compiler" % scalaVersion.value,
+      exportJars := true
+    )
+
+val commonJUnitTestOutputsSettings = Def.settings(
+  nameSettings,
+  noPublishSettings,
+  Compile / publishArtifact := false,
+  Test / parallelExecution := false,
+  Test / unmanagedSourceDirectories +=
+    baseDirectory.value.getParentFile / "shared/src/test/scala",
+  Test / testOptions ++= Seq(
+    Tests.Argument(TestFrameworks.JUnit, "-a", "-s", "-v"),
+    Tests.Filter(_.endsWith("Assertions"))
+  ),
+  Test / scalacOptions --= Seq("-deprecation", "-Xfatal-warnings"),
+  Test / scalacOptions += "-deprecation:false"
+)
+
+lazy val junitTestOutputsNative =
+  project
+    .in(file("junit-test/output-native"))
+    .enablePlugins(MyScalaNativePlugin)
+    .settings(
+      commonJUnitTestOutputsSettings,
+      Test / scalacOptions ++= {
+        val jar = (junitPlugin / Compile / packageBin).value
+        Seq(s"-Xplugin:$jar")
+      }
+    )
+    .dependsOn(
+      nscplugin        % "plugin",
+      junitRuntime     % "test",
+      junitAsyncNative % "test",
+      testInterface    % "test"
+    )
+
+lazy val junitTestOutputsJVM =
+  project
+    .in(file("junit-test/output-jvm"))
+    .settings(
+      commonJUnitTestOutputsSettings,
+      libraryDependencies ++= Seq(
+        "com.novocode" % "junit-interface" % "0.11" % "test"
+      )
+    )
+    .dependsOn(junitAsyncJVM % "test")
+
+lazy val junitAsyncNative =
+  project
+    .in(file("junit-async/native"))
+    .enablePlugins(MyScalaNativePlugin)
+    .settings(
+      nameSettings,
+      Compile / publishArtifact := false
+    )
+    .dependsOn(nscplugin % "plugin", allCoreLibs)
+
+lazy val junitAsyncJVM =
+  project
+    .in(file("junit-async/jvm"))
+    .settings(
+      nameSettings,
+      publishArtifact := false
+    )
